kub-homework-1-5/service-back.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-back
spec:
  selector:
    app: backend
  ports:
    - name: multitool-http
      port: 80
      targetPort: 80
