kub-homework-1-5/service-front.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-front
spec:
  selector:
    app: frontend
  ports:
    - name: nginx-http
      port: 80
      targetPort: 80
